--- a/config.ini
+++ b/config.ini
@@ -1,23 +1,20 @@
 [mysql]
 #use in settings.py
-host=172.18.1.147
+host=47.115.224.113
 port=3306
-database=newcloud_631
+database=newcloud
 user=root
-password=xidian320
+password=123
 
 [host]
 #management node service IP+PORT
-ip=172.18.1.147
+ip=127.0.0.1
 port=8080
 
 [novnc]
-#admins/views.py.show_vnc()
 host_port=8888
 websockify_port=8080
-#admins/views.py.agree_vm()
 vnc_port=8000
-#admins/views.py.delete_vm()
 token_path=TOKEN
 
 [nextcloud]
